# dirty

./: LICENSE  README.md  dirty.cabal
src/: Main.hs
