name:                dirty
version:             0.1.0.0
category:            Command Line Tool

-- synopsis:
description:         A script that searches through the filesystem to find and report unstaged and uncommitted work in local git repositories.

homepage:    https://github.com/typeclasses/dirty
bug-reports: https://github.com/typeclasses/dirty/issues

author:              Julie Moronuki
maintainer:          Julie Moronuki, Chris Martin

copyright:           2018 Typeclass Consulting, LLC
license:             MIT
license-file:        LICENSE

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md
source-repository head
  type: git
  location: https://github.com/typeclasses/dirty

executable dirty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded
  build-depends:       base >= 4.7 && < 5
                     , turtle
